[gd_scene load_steps=2 format=3 uid="uid://cqp6e4ijrsv3a"]

[ext_resource type="Script" path="res://scripts/root.gd" id="1_n1vci"]

[node name="Root" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n1vci")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -502.0
offset_top = 21.0
offset_right = -27.0
offset_bottom = -21.0
grow_horizontal = 0
grow_vertical = 2

[node name="Button" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(180, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Shuffle"

[node name="Control" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Control3" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Control4" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="BuffLabel" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.629441, 0.00498538, 1)
theme_override_font_sizes/font_size = 32
text = "Generic Buff"

[node name="Control" type="Control" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="BuffTile" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28

[node name="Control2" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="DebuffLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.967119, 0, 0.0945349, 1)
theme_override_font_sizes/font_size = 32
text = "Generic Buff"

[node name="Control" type="Control" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="DebuffTile" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
